# mdtar

./: .gitignore  mdtar.mdtar
mdtar/: mdtar.cabal
mdtar/executables/: mdtar.hs
mdtar/test/: cases.hs
mdtar/test/cases/single-file/: tar.md
