cabal-version: 2.4

name: mdtar
version: 0

library
    hs-source-dirs: library
    exposed-modules: Text.MarkdownTAR

    build-depends:
        attoparsec
      , base
      , containers
      , directory
      , filepath
      , pipes
      , pipes-attoparsec
      , pipes-safe
      , text

executable mdtar
    hs-source-dirs: executables
    main-is: mdtar.hs

    build-depends:
        base
      , mdtar
      , optparse-applicative

test-suite cases
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: cases.hs
    other-modules: Paths_mdtar

    build-depends:
        base
      , hedgehog
      , mdtar
      , text
